--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,7 @@ spring:
     jpa:
         hibernate:
             ddl-auto: validate
+    test:
+        constructor:
+            autowired:
+                mode: all
