--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,9 @@
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5433/mandatory_model_in_dbms
+        url: jdbc:postgresql://localhost:5432/mandatory_model_in_dbms
         username: postgres
         password: pass
+        driver-class-name: org.postgresql.Driver
     jpa:
         hibernate:
             ddl-auto: validate
-    test:
-        constructor:
-            autowired:
-                mode: all
