--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<version>1.19.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 
