--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,7 @@ spring:
     jpa:
         hibernate:
             ddl-auto: validate
+
+logging:
+    level:
+        org.springframework.web: TRACE
