--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,16 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
+
 	<groupId>com.barabanov</groupId>
 	<artifactId>Mandatory-model-in-dbms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -71,6 +74,10 @@
 			<version>1.6.0.Beta1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 
