--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
         hibernate:
             ddl-auto: validate
 
-logging:
-    level:
-        org.springframework.web: TRACE
+
+        properties:
+            hibernate:
+                show_sql=true:#logging:
+#    level:
+#        org.springframework.web: TRACE
