Промежуточный коммит. Подключён spring security. Настроен UserDetailsService, изменено дерево наследования User.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
     datasource:
         url: jdbc:postgresql://localhost:5432/mandatory_model_in_dbms
         username: postgres
-        password: pass
-        driver-class-name: org.postgresql.Driver
+        password: postgres
+#        driver-class-name: org.postgresql.Driver
     jpa:
         hibernate:
             ddl-auto: validate
