--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,6 +2,4 @@ databaseChangeLog:
   - include:
       file: db/changelog/dbms/security/security.levels-1.0.sql
   - include:
-      file: db/changelog/dbms/security/dbms.user-1.0.sql
-  - include:
-      file: db/changelog/dbms/security/dbms.admin-1.0.sql
+      file: db/changelog/dbms/security/dbms.users-2.0.sql
